tests/neg/i17612b.check
-- Error: tests/neg/i17612b/i17612b.scala:21:15 ------------------------------------------------------------------------
21 |	class Derived(x : Int, x3: Int, y: Int, z2: Int) extends BaseB, BaseC(x3), Base(x, y + 1, z2): // error // error / for x, y translated to private[this] x field & shadowing var Base.x, Base.y
   |	              ^
   |	              value x in class Derived shadows field x inherited from trait Base
-- Error: tests/neg/i17612b/i17612b.scala:21:33 ------------------------------------------------------------------------
21 |	class Derived(x : Int, x3: Int, y: Int, z2: Int) extends BaseB, BaseC(x3), Base(x, y + 1, z2): // error // error / for x, y translated to private[this] x field & shadowing var Base.x, Base.y
   |	                                ^
   |	                                value y in class Derived shadows field y inherited from trait Base
-- Error: tests/neg/i17612b/i17612b.scala:23:2 -------------------------------------------------------------------------
23 |		private val shadowed2 = 2 + 2 // error (In Scala 2 we cannot do that got the warning)
   |		^
   |		value shadowed2 in class Derived shadows field shadowed2 inherited from trait Base
-- Error: tests/neg/i17612b/i17612b.scala:24:2 -------------------------------------------------------------------------
24 |		private[this] val shadowed3 = 3 + 3 // error
   |		^
   |		value shadowed3 in class Derived shadows field shadowed3 inherited from trait Base
-- Error: tests/neg/i17612b/i17612b.scala:26:2 -------------------------------------------------------------------------
26 |		private val shadowed5 = 5 + 5 // error
   |		^
   |		value shadowed5 in class Derived shadows field shadowed5 inherited from trait Base
-- Error: tests/neg/i17612b/i17612b.scala:41:20 ------------------------------------------------------------------------
41 |	class UnderDerived(x: Int, y: Int, z: Int) extends Derived(x, 1, y, z) // error // error // error
   |	                   ^
   |	                   value x in class UnderDerived shadows field x inherited from trait Base
-- Error: tests/neg/i17612b/i17612b.scala:41:28 ------------------------------------------------------------------------
41 |	class UnderDerived(x: Int, y: Int, z: Int) extends Derived(x, 1, y, z) // error // error // error
   |	                           ^
   |	                           value y in class UnderDerived shadows field y inherited from trait Base
-- Error: tests/neg/i17612b/i17612b.scala:41:36 ------------------------------------------------------------------------
41 |	class UnderDerived(x: Int, y: Int, z: Int) extends Derived(x, 1, y, z) // error // error // error
   |	                                   ^
   |	                                   value z in class UnderDerived shadows field z inherited from trait Base
